--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/book_store
 spring.datasource.username=root
-spring.datasource.password=xxxx
+spring.datasource.password=DavidGoggins200@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
