fix mistakes with liquibase configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/book_store
 spring.datasource.username=root
-spring.datasource.password=DavidGoggins200@
+spring.datasource.password=xxxx
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+changeLogFile=/db/changelog/db.changelog-master.yaml
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
