fix update() method and add context-path property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+server.servlet.context-path=/api
 changeLogFile=/db/changelog/db.changelog-master.yaml
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
