--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,7 @@ databaseChangeLog:
       file: db/changelog/changes/02-create-users-table.yaml
   - include:
       file: db/changelog/changes/03-add-is-deleted-column-to-users-table.yaml
+  - include:
+      file: db/changelog/changes/04-create-roles-table.yaml
+  - include:
+      file: db/changelog/changes/05-create-users_roles-table.yaml
