include insert-data-to-users_roles-table.yaml file to changelog

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,7 @@ databaseChangeLog:
       file: db/changelog/changes/04-create-roles-table.yaml
   - include:
       file: db/changelog/changes/05-create-users_roles-table.yaml
+  - include:
+      file: db/changelog/changes/06-insert-data-to-roles-table.yaml
+  - include:
+      file: db/changelog/changes/07-insert-data-to-users_roles-table.yaml
