--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,7 @@ databaseChangeLog:
       file: db/changelog/changes/06-insert-data-to-roles-table.yaml
   - include:
       file: db/changelog/changes/07-insert-data-to-users_roles-table.yaml
+  - include:
+      file: db/changelog/changes/08-drop-users_roles-table.yaml
+  - include:
+      file: db/changelog/changes/09-create-users_roles-table.yaml
