--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,7 @@ databaseChangeLog:
       file: db/changelog/changes/08-drop-users_roles-table.yaml
   - include:
       file: db/changelog/changes/09-create-users_roles-table.yaml
+  - include:
+      file: db/changelog/changes/10-insert-admin-to-users-table.yaml
+  - include:
+      file: db/changelog/changes/11-insert-admin-role-to-admin-in-users_roles-table.yaml
