create JwtUtil class and expiration&secret properties in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ server.servlet.context-path=/api
 changeLogFile=/db/changelog/db.changelog-master.yaml
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+jwt.expiration=30000
+jwt.secret=superMegaSECRETforJWTtoKen8888
