--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,5 @@ databaseChangeLog:
       file: db/changelog/changes/10-insert-admin-to-users-table.yaml
   - include:
       file: db/changelog/changes/11-insert-admin-role-to-admin-in-users_roles-table.yaml
+  - include:
+      file: db/changelog/changes/12-add-unique-constraint-for-role-in-roles-table.yaml
