add constraint to is_deleted column

--- a/src/main/resources/db/changelog/changes/03-add-is-deleted-column-to-users-table.yaml
+++ b/src/main/resources/db/changelog/changes/03-add-is-deleted-column-to-users-table.yaml
@@ -10,3 +10,5 @@ databaseChangeLog:
                   name: is_deleted
                   type: boolean
                   defaultValueBoolean: false
+                  constraints:
+                    nullable: false
