change role naming (add prefix ROLE_)

--- a/src/main/resources/db/changelog/changes/06-insert-data-to-roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/06-insert-data-to-roles-table.yaml
@@ -8,10 +8,10 @@ databaseChangeLog:
             columns:
               - column:
                   name: role
-                  value: ADMIN
+                  value: ROLE_ADMIN
         - insert:
             tableName: roles
             columns:
               - column:
                   name: role
-                  value: USER
+                  value: ROLE_USER
