--- a/src/main/resources/db/changelog/changes/09-create-users_roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/09-create-users_roles-table.yaml
@@ -10,9 +10,15 @@ databaseChangeLog:
                   name: user_id
                   type: bigint
                   constraints:
+                    primaryKey: true
                     nullable: false
+                    references: users(id)
+                    foreignKeyName: fk_users_roles_user_id
               - column:
                   name: role_id
                   type: bigint
                   constraints:
+                    primaryKey: true
                     nullable: false
+                    references: roles(id)
+                    foreignKeyName: fk_users_roles_role_id
