--- a/src/main/resources/db/changelog/changes/12-create-categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/12-create-categories-table.yaml
@@ -1,6 +1,29 @@
 databaseChangeLog:
   - changeSet:
-      id: 0
-      author: admin
+      id: create-categories-table
+      author: Bohdan
       changes:
-        -
+        - createTable:
+            tableName: categories
+            columns:
+              - column:
+                  name: id
+                  type: bigint
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: name
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: description
+                  type: varchar(255)
+              - column:
+                  name: is_deleted
+                  type: boolean
+                  defaultValueBoolean: false
+                  constraints:
+                    nullable: false
