--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -23,3 +23,5 @@ databaseChangeLog:
       file: db/changelog/changes/11-insert-admin-role-to-admin-in-users_roles-table.yaml
   - include:
       file: db/changelog/changes/12-create-categories-table.yaml
+  - include:
+      file: db/changelog/changes/13-create-books_categories-table.yaml
