fix mistakes after mentor review

--- a/src/main/resources/db/changelog/changes/01-create-books-table.yaml
+++ b/src/main/resources/db/changelog/changes/01-create-books-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: create-books-table
-      author: Bohdan
+      author: Bohdan Bilko
       changes:
         - createTable:
             tableName: books
@@ -12,7 +12,6 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-                    nullable: false
               - column:
                   name: title
                   type: varchar(255)
