--- a/src/main/resources/db/changelog/changes/06-insert-data-to-roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/06-insert-data-to-roles-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: insert-roles
-      author: Bohdan
+      author: Bohdan Bilko
       changes:
         - insert:
             tableName: roles
