--- a/src/main/resources/db/changelog/changes/08-drop-users_roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/08-drop-users_roles-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: drop-users_roles-table
-      author: Bohdan
+      author: Bohdan Bilko
       changes:
         - dropTable:
             tableName: users_roles
