--- a/src/main/resources/db/changelog/changes/11-insert-admin-role-to-admin-in-users_roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/11-insert-admin-role-to-admin-in-users_roles-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: insert-admin-role-to-admin-in-users_roles-table
-      author: Bohdan
+      author: Bohdan Bilko
       preConditions:
         - sqlCheck:
             expectedResult: 1
