--- a/src/main/resources/db/changelog/changes/12-create-categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/12-create-categories-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: create-categories-table
-      author: Bohdan
+      author: Bohdan Bilko
       changes:
         - createTable:
             tableName: categories
@@ -12,7 +12,6 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-                    nullable: false
               - column:
                   name: name
                   type: varchar(255)
