--- a/src/main/resources/db/changelog/changes/07-insert-data-to-users_roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/07-insert-data-to-users_roles-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: insert-data-to-users_roles-table
-      author: Bohdan
+      author: Bohdan Bilko
       changes:
         - insert:
             tableName: users_roles
