--- a/src/main/resources/db/changelog/changes/13-create-books_categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/13-create-books_categories-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: create-books_categories-table
-      author: Bohdan
+      author: Bohdan Bilko
       changes:
         - createTable:
             tableName: books_categories
@@ -11,7 +11,6 @@ databaseChangeLog:
                   type: bigint
                   constraints:
                     primaryKey: true
-                    nullable: false
                     references: books(id)
                     foreignKeyName: fk_books_categories_book_id
               - column:
@@ -19,6 +18,5 @@ databaseChangeLog:
                   type: bigint
                   constraints:
                     primaryKey: true
-                    nullable: false
                     references: categories(id)
                     foreignKeyName: fk_books_categories_category_id
